// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeServerEpic fail path actions snapshot 1`] = `
Array [
  Object {
    "id": "server-id",
    "type": "InspectServer/REMOVE_BUTTON_CLICKED",
  },
  Object {
    "reason": "Error message",
    "type": "removeServer/FAILED",
  },
]
`;

exports[`removeServerEpic success path actions snapshot 1`] = `
Array [
  Object {
    "id": "server-id",
    "type": "InspectServer/REMOVE_BUTTON_CLICKED",
  },
  Object {
    "id": "server-id",
    "type": "removeServer/SUCCEEDED",
  },
]
`;
